@@ -32,27 +32,39 @@ import java.util.concurrent.ScheduledFuture;;
  */
 public class Simulator implements Runnable {
 
-    public static boolean   USE_SERIAL_PORT       = false;  // use serial port for MAV instead of UDP
-    public static boolean   COMMUNICATE_WITH_QGC  = true;   // open UDP port to QGC
+    private static enum Port {
+        SERIAL,
+        UDP,
+        TCP
+    }
+    private static Port PORT = Port.UDP;
+
+    public static boolean   COMMUNICATE_WITH_QGC  = false;   // open UDP port to QGC
+    public static boolean   COMMUNICATE_WITH_SDK  = false;   // open UDP port to SDK
     public static boolean   DO_MAG_FIELD_LOOKUP   =
         false;  // perform online mag incl/decl lookup for current position
     public static boolean   USE_GIMBAL            =
         true;   // enable gimbal modeling (optionally also define remote pitch/roll controls below)
+    public static boolean   SHOW_GUI              = true;   // Default is to have the GUI
     public static boolean   GUI_SHOW_REPORT_PANEL = false;  // start with report panel showing
     public static boolean   GUI_START_MAXIMIZED   = false;  // start with gui in maximized window
     public static boolean   GUI_ENABLE_AA         = true;   // anti-alias on 3D scene
     public static ViewTypes GUI_START_VIEW        = ViewTypes.VIEW_STATIC;
     public static ZoomModes GUI_START_ZOOM        = ZoomModes.ZOOM_DYNAMIC;
+    public static boolean LOCKSTEP_ENABLED = false;
     public static boolean   LOG_TO_STDOUT         =
         true;   // send System.out messages to stdout (console) as well as any custom handlers (see SystemOutHandler)
     public static boolean DEBUG_MODE = false;
+    public static boolean DISPLAY_ONLY = false; // display HIL_STATE_QUATERNION from the autopilot, simulation engine disabled
 
-    public static final int    DEFAULT_SIM_SPEED = 500; // Hz
+    public static final int    DEFAULT_SIM_RATE = 250; // Hz
+    public static final double    DEFAULT_SPEED_FACTOR = 1.0;
     public static final int    DEFAULT_AUTOPILOT_SYSID =
         -1; // System ID of autopilot to communicate with. -1 to auto set ID on first received heartbeat.
-    public static final String DEFAULT_AUTOPILOT_TYPE = "generic";  // eg. "px4" or "aq"
+    public static final String DEFAULT_AUTOPILOT_TYPE = "px4";  // eg. "px4" or "aq"
     public static final int    DEFAULT_AUTOPILOT_PORT = 14560;
     public static final int    DEFAULT_QGC_PEER_PORT = 14550;
+    public static final int    DEFAULT_SDK_PEER_PORT = 14540;
     public static final String DEFAULT_SERIAL_PATH = "/dev/tty.usbmodem1";
     public static final int    DEFAULT_SERIAL_BAUD_RATE = 230400;
     public static final String LOCAL_HOST = "127.0.0.1";
@@ -65,22 +77,29 @@ public class Simulator implements Runnable {
     // Seattle downtown: 47.592182, -122.316031, 86m
     // Moscow downtown: 55.753395, 37.625427, 155m
     // Trumansburg: 42.5339037, -76.6452384, 287m
-    public static LatLonAlt DEFAULT_ORIGIN_POS = new LatLonAlt(47.397742, 8.545594, 488);
+    // Mall of the Mainland: 29.40749300874598, -95.02667963504793, 5m
+    //public static LatLonAlt DEFAULT_ORIGIN_POS = new LatLonAlt(47.397742, 8.545594, 488);
+    public static LatLonAlt DEFAULT_ORIGIN_POS = new LatLonAlt(29.40749300874598, -95.02667963504793, 5);
 
     // Mag inclination and declination in degrees. If both are left as zero, then DEFAULT_MAG_FIELD is used.
     // If DO_MAG_FIELD_LOOKUP = true or -automag switch is used then both this value and DEFAULT_MAG_FIELD are ignored.
-    // Zurich:  63.32, 2.13
-    // Seattle:
-    // Moscow:
-    // T-burg: 68.53, -11.94
-    public static double  DEFAULT_MAG_INCL = 63.32;
-    public static double  DEFAULT_MAG_DECL = 2.13;
+    // Zurich:  63.39, 2.75
+    // Seattle: 69.00, 15.61
+    // Moscow: 71.53, 11.45
+    // T-burg: 68.17, -11.75
+    // public static double  DEFAULT_MAG_INCL = 63.23;
+    // public static double  DEFAULT_MAG_DECL = 2.44;
+    public static double  DEFAULT_MAG_INCL = 58.42;
+    public static double  DEFAULT_MAG_DECL = 2.06;
     // Alternate way to set mag field vectors directly if MAG_INCL and MAG_DECL are zero.
-    //   If Y value is left as zero, then an approximate declination will be added later based on the origin GPS position.
-    // Zurich:  (0.44831f, 0.01664f, 0.89372f)
-    // Seattle: (0.34252f, 0.09805f, 0.93438f)
-    // Moscow:  (0.31337f, 0.06030f, 0.94771f)
-    public static Vector3d  DEFAULT_MAG_FIELD = new Vector3d(0.44831f, 0.01664f, 0.89372f);
+    //   If Y value is left as zero, the X value specifies the horizontal field and an
+    //   approximate declination will be added later based on the origin GPS position.
+    // Zurich:  (0.21506f, 0.01021f, 0.42974f)
+    // Seattle: (0.18403f, 0.05142f, 0.49779f)
+    // Moscow:  (0.16348f, 0.03311f, 0.49949f)
+    // T-burg:  (0.19202f, -0.03993f, 0.48963f)
+    //public static Vector3d  DEFAULT_MAG_FIELD = new Vector3d(0.21506f, 0.01021f, 0.42974f);
+    public static Vector3d  DEFAULT_MAG_FIELD = new Vector3d(0.523185765f, 0.019230357f, 0.851988423f);
 
     public static int    DEFAULT_CAM_PITCH_CHAN =
         4;     // Control gimbal pitch from autopilot, -1 to disable
@@ -91,32 +110,41 @@ public class Simulator implements Runnable {
     public static Double DEFAULT_CAM_ROLL_SCAL  =
         1.57;  // channel value to physical movement (+/-90 deg)
 
-
-    private static int sleepInterval = (int)1e6 / DEFAULT_SIM_SPEED;  // Main loop interval, in us
+    private static int sleepInterval = (int)1e6 / DEFAULT_SIM_RATE;  // Main loop interval, in us
+    private static double speedFactor = DEFAULT_SPEED_FACTOR;
     private static int autopilotSysId = DEFAULT_AUTOPILOT_SYSID;
     private static String autopilotType = DEFAULT_AUTOPILOT_TYPE;
     private static String autopilotIpAddress = LOCAL_HOST;
     private static int autopilotPort = DEFAULT_AUTOPILOT_PORT;
     private static String qgcIpAddress = LOCAL_HOST;
+    private static String sdkIpAddress = LOCAL_HOST;
     private static int qgcPeerPort = DEFAULT_QGC_PEER_PORT;
+    private static int sdkPeerPort = DEFAULT_SDK_PEER_PORT;
     private static String serialPath = DEFAULT_SERIAL_PATH;
     private static int serialBaudRate = DEFAULT_SERIAL_BAUD_RATE;
 
     private static HashSet<Integer> monitorMessageIds = new HashSet<Integer>();
     private static boolean monitorMessage = false;
 
+
     private Visualizer3D visualizer;
     private AbstractMulticopter vehicle;
     private CameraGimbal2D gimbal;
-    private MAVLinkHILSystem hilSystem;
+    private MAVLinkHILSystemBase hilSystem;
     private MAVLinkPort autopilotMavLinkPort;
     private UDPMavLinkPort udpGCMavLinkPort;
+    private UDPMavLinkPort udpSDKMavLinkPort;
     private ScheduledFuture<?> thisHandle;
     private World world;
     private ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
     private SystemOutHandler outputHandler;
 //  private int simDelayMax = 500;  // Max delay between simulated and real time to skip samples in simulator, in ms
 
+    private long simTimeUs = 0;
+    private volatile boolean paused = false;
+    private long lastTimeRan = 0;
+    private int checkFactor = 2;
+    private int slowDownCounter = 0;
     public volatile boolean shutdown = false;
 
     public Simulator() throws IOException, InterruptedException {
@@ -145,6 +173,12 @@ public class Simulator implements Runnable {
         LatLonAlt referencePos = new LatLonAlt(latRef, lonRef, altRef);
         world.setGlobalReference(referencePos);
 
+        // Get SITL speed from environment as well.
+        String speedFactorStr = System.getenv("PX4_SIM_SPEED_FACTOR");
+        if (speedFactorStr != null) {
+            speedFactor = Double.parseDouble(speedFactorStr);
+        }
+
         // Create environment
         SimpleEnvironment simpleEnvironment = new SimpleEnvironment(world);
         //simpleEnvironment.setWind(new Vector3d(0.8, 2.0, 0.0));
@@ -152,16 +186,23 @@ public class Simulator implements Runnable {
         //simpleEnvironment.setGroundLevel(0.0f);
         world.addObject(simpleEnvironment);
 
-        // Create GUI
-        System.out.println("Starting GUI...");  // this is the longest part of startup so let user know
-        visualizer = new Visualizer3D(world);
-        visualizer.setAAEnabled(GUI_ENABLE_AA);
-        if (GUI_START_MAXIMIZED) {
-            visualizer.setExtendedState(JFrame.MAXIMIZED_BOTH);
-        }
+        if (SHOW_GUI) {
+            // Create GUI
+            System.out.println("Starting GUI...");  // this is the longest part of startup so let user know
+            visualizer = new Visualizer3D(world);
+            visualizer.setSimulator(this);
+            visualizer.setAAEnabled(GUI_ENABLE_AA);
+            if (GUI_START_MAXIMIZED) {
+                visualizer.setExtendedState(JFrame.MAXIMIZED_BOTH);
+            }
 
-        // add GUI output stream handler for displaying messages
-        outputHandler.addOutputStream(visualizer.getOutputStream());
+            // add GUI output stream handler for displaying messages
+            outputHandler.addOutputStream(visualizer.getOutputStream());
+        } else {
+            // GUI is disabled
+            System.out.println("GUI not enabled");
+            visualizer = null;
+        }
 
         MAVLinkSchema schema = null;
         try {
@@ -174,30 +215,26 @@ public class Simulator implements Runnable {
         // Create MAVLink connections
         MAVLinkConnection connHIL = new MAVLinkConnection(world);
         world.addObject(connHIL);
-        MAVLinkConnection connCommon = new MAVLinkConnection(world);
-        // Don't spam ground station with HIL messages
-        if (schema != null) {
-            connCommon.addSkipMessage(schema.getMessageDefinition("HIL_CONTROLS").id);
-            connCommon.addSkipMessage(schema.getMessageDefinition("HIL_ACTUATOR_CONTROLS").id);
-            connCommon.addSkipMessage(schema.getMessageDefinition("HIL_SENSOR").id);
-            connCommon.addSkipMessage(schema.getMessageDefinition("HIL_GPS").id);
-            connCommon.addSkipMessage(schema.getMessageDefinition("HIL_STATE_QUATERNION").id);
-        }
-        world.addObject(connCommon);
 
         // Create ports
-        if (USE_SERIAL_PORT) {
-            //Serial port: connection to autopilot over serial.
+        if (PORT == Port.SERIAL) {
             SerialMAVLinkPort port = new SerialMAVLinkPort(schema);
             port.setup(serialPath, serialBaudRate, 8, 1, 0);
             port.setDebug(DEBUG_MODE);
             autopilotMavLinkPort = port;
+
+        } else if (PORT == Port.TCP) {
+            TCPMavLinkPort port = new TCPMavLinkPort(schema);
+            port.setDebug(DEBUG_MODE);
+            port.setup(autopilotIpAddress, autopilotPort);
+            if (monitorMessage) {
+                port.setMonitorMessageID(monitorMessageIds);
+            }
+            autopilotMavLinkPort = port;
         } else {
             UDPMavLinkPort port = new UDPMavLinkPort(schema);
             port.setDebug(DEBUG_MODE);
-            port.setup(autopilotIpAddress,
-                       autopilotPort); // default source port 0 for autopilot, which is a client of JMAVSim
-            // monitor certain mavlink messages.
+            port.setup(autopilotIpAddress, autopilotPort);
             if (monitorMessage) {
                 port.setMonitorMessageID(monitorMessageIds);
             }
@@ -206,17 +243,53 @@ public class Simulator implements Runnable {
 
         // allow HIL and GCS to talk to this port
         connHIL.addNode(autopilotMavLinkPort);
-        connCommon.addNode(autopilotMavLinkPort);
-        // UDP port: connection to ground station
-        udpGCMavLinkPort = new UDPMavLinkPort(schema);
-        udpGCMavLinkPort.setDebug(DEBUG_MODE);
+
+        // We don't want to spam QGC or SDK with HIL messages.
+        String[] skipMessages = {
+            "HIL_CONTROLS",
+            "HIL_ACTUATOR_CONTROLS",
+            "HIL_SENSOR",
+            "HIL_GPS",
+            "HIL_STATE_QUATERNION"
+        };
+
         if (COMMUNICATE_WITH_QGC) {
-            udpGCMavLinkPort.setup(qgcIpAddress, qgcPeerPort);
+            MAVLinkConnection connQGC = new MAVLinkConnection(world);
+            if (schema != null) {
+                for (String  skipMessage : skipMessages) {
+                    connQGC.addSkipMessage(schema.getMessageDefinition(skipMessage).id);
+                }
+            }
+            world.addObject(connQGC);
+
+            udpGCMavLinkPort = new UDPMavLinkPort(schema);
             udpGCMavLinkPort.setDebug(DEBUG_MODE);
-            if (monitorMessage && USE_SERIAL_PORT) {
+            udpGCMavLinkPort.setup(qgcIpAddress, qgcPeerPort);
+            if (monitorMessage && PORT == Port.SERIAL) {
                 udpGCMavLinkPort.setMonitorMessageID(monitorMessageIds);
             }
-            connCommon.addNode(udpGCMavLinkPort);
+            connQGC.addNode(udpGCMavLinkPort);
+            connQGC.addNode(autopilotMavLinkPort);
+        }
+
+        if (COMMUNICATE_WITH_SDK) {
+
+            MAVLinkConnection connSDK = new MAVLinkConnection(world);
+            if (schema != null) {
+                for (String  skipMessage : skipMessages) {
+                    connSDK.addSkipMessage(schema.getMessageDefinition(skipMessage).id);
+                }
+            }
+            world.addObject(connSDK);
+
+            udpSDKMavLinkPort = new UDPMavLinkPort(schema);
+            udpSDKMavLinkPort.setDebug(DEBUG_MODE);
+            udpSDKMavLinkPort.setup(sdkIpAddress, sdkPeerPort);
+            if (monitorMessage && PORT == Port.SERIAL) {
+                udpSDKMavLinkPort.setMonitorMessageID(monitorMessageIds);
+            }
+            connSDK.addNode(udpSDKMavLinkPort);
+            connSDK.addNode(autopilotMavLinkPort);
         }
 
         // Set up magnetic field deviations
@@ -225,7 +298,7 @@ public class Simulator implements Runnable {
             simpleEnvironment.setMagField(magFieldLookup(referencePos));
         } else if (DEFAULT_MAG_INCL != 0.0 || DEFAULT_MAG_DECL != 0.0) {
             simpleEnvironment.setMagFieldByInclDecl(DEFAULT_MAG_INCL, DEFAULT_MAG_DECL);
-        } else if (DEFAULT_MAG_FIELD.y == 0.0f && (DEFAULT_MAG_FIELD.x != 0.0 ||
+        } else if (DEFAULT_MAG_FIELD.y == 0.0 && (DEFAULT_MAG_FIELD.x != 0.0 ||
                                                    DEFAULT_MAG_FIELD.z != 0.0)) {
             Vector3d magField = DEFAULT_MAG_FIELD;
             // Set declination based on the initialization position of the Simulator
@@ -237,6 +310,11 @@ public class Simulator implements Runnable {
             magDecl.rotZ(decl);
             magDecl.transform(magField);
             simpleEnvironment.setMagField(magField);
+        } else if (DEFAULT_MAG_FIELD.y != 0.0
+                   && DEFAULT_MAG_FIELD.x != 0.0
+                   && DEFAULT_MAG_FIELD.z != 0.0) {
+
+            simpleEnvironment.setMagField(DEFAULT_MAG_FIELD);
         }
 
         // Create vehicle with sensors
@@ -248,29 +326,40 @@ public class Simulator implements Runnable {
 
         // Create MAVLink HIL system
         // SysId should be the same as autopilot, ComponentId should be different!
-        hilSystem = new MAVLinkHILSystem(schema, autopilotSysId, 51, vehicle);
+        if (DISPLAY_ONLY){
+            vehicle.setIgnoreGravity(true);
+            vehicle.setIgnoreWind(true);
+            hilSystem = new MAVLinkDisplayOnly(schema, autopilotSysId, 51, vehicle);
+        } else {
+            hilSystem = new MAVLinkHILSystem(schema, autopilotSysId, 51, vehicle);
+            if (SHOW_GUI) {
+                visualizer.setHilSystem((MAVLinkHILSystem)hilSystem);
+            }
+        }
+        hilSystem.setSimulator(this);
         //hilSystem.setHeartbeatInterval(0);
         connHIL.addNode(hilSystem);
         world.addObject(vehicle);
 
-        // Put camera on vehicle with gimbal
-        if (USE_GIMBAL) {
-            gimbal = buildGimbal();
-            world.addObject(gimbal);
-            visualizer.setGimbalViewObject(gimbal);
+        if (SHOW_GUI) {
+            // Put camera on vehicle with gimbal
+            if (USE_GIMBAL) {
+                gimbal = buildGimbal();
+                world.addObject(gimbal);
+                visualizer.setGimbalViewObject(gimbal);
+            }
+
+            // Create simulation report updater
+            world.addObject(new ReportUpdater(world, visualizer));
+
+            visualizer.addWorldModels();
+            visualizer.setVehicleViewObject(vehicle);
+
+            // set default view and zoom mode
+            visualizer.setViewType(GUI_START_VIEW);
+            visualizer.setZoomMode(GUI_START_ZOOM);
+            visualizer.toggleReportPanel(GUI_SHOW_REPORT_PANEL);
         }
-
-        // Create simulation report updater
-        world.addObject(new ReportUpdater(world, visualizer));
-
-        visualizer.addWorldModels();
-        visualizer.setHilSystem(hilSystem);
-        visualizer.setVehicleViewObject(vehicle);
-
-        // set default view and zoom mode
-        visualizer.setViewType(GUI_START_VIEW);
-        visualizer.setZoomMode(GUI_START_ZOOM);
-        visualizer.toggleReportPanel(GUI_SHOW_REPORT_PANEL);
 
         // Open ports
         try {
@@ -288,7 +377,20 @@ public class Simulator implements Runnable {
             }
         }
 
-        thisHandle = executor.scheduleAtFixedRate(this, 0, sleepInterval, TimeUnit.MICROSECONDS);
+        if (COMMUNICATE_WITH_SDK) {
+            try {
+                udpSDKMavLinkPort.open();
+            } catch (IOException e) {
+                System.out.println("ERROR: Failed to open UDP link to SDK: " + e.getLocalizedMessage());
+            }
+        }
+
+        if (LOCKSTEP_ENABLED) {
+            thisHandle = executor.scheduleAtFixedRate(this, 0, (int)(sleepInterval / speedFactor / checkFactor),
+                                                      TimeUnit.MICROSECONDS);
+        } else {
+            thisHandle = executor.scheduleAtFixedRate(this, 0, (int)(sleepInterval), TimeUnit.MICROSECONDS);
+        }
 
         Runtime.getRuntime().addShutdownHook(new Thread() {
             @Override
@@ -329,12 +431,17 @@ public class Simulator implements Runnable {
         }
 
         System.exit(0);
+
+    }
+
+    public void pauseToggle() {
+        paused = !paused;
     }
 
     private AbstractMulticopter buildMulticopter() {
         Vector3d gc = new Vector3d(0.0, 0.0, 0.0);  // gravity center
         AbstractMulticopter vehicle = new Quadcopter(world, DEFAULT_VEHICLE_MODEL, "x", "default",
-                                                     0.33 / 2, 4.0, 0.05, 0.005, gc);
+                                                     0.33 / 2, 4.0, 0.05, 0.005, gc, SHOW_GUI);
         Matrix3d I = new Matrix3d();
         // Moments of inertia
         I.m00 = 0.005;  // X
@@ -346,12 +453,11 @@ public class Simulator implements Runnable {
         SimpleSensors sensors = new SimpleSensors();
         sensors.setGPSInterval(50);
         sensors.setGPSDelay(200);
-        sensors.setGPSStartTime(System.currentTimeMillis() + 300);
         sensors.setNoise_Acc(0.05f);
         sensors.setNoise_Gyo(0.01f);
         sensors.setNoise_Mag(0.005f);
         sensors.setNoise_Prs(0.1f);
-        vehicle.setSensors(sensors);
+        vehicle.setSensors(sensors, getSimMillis());
         //v.setDragRotate(0.1);
 
         return vehicle;
@@ -361,7 +467,7 @@ public class Simulator implements Runnable {
     private AbstractMulticopter buildAQ_leora() {
         Vector3d gc = new Vector3d(0.0, 0.0, 0.0);  // gravity center
         AbstractMulticopter vehicle = new Quadcopter(world, DEFAULT_VEHICLE_MODEL, "x", "cw_fr", 0.1, 1.35,
-                                                     0.02, 0.0005, gc);
+                                                     0.02, 0.0005, gc, SHOW_GUI);
 
         Matrix3d I = new Matrix3d();
         // Moments of inertia
@@ -377,20 +483,19 @@ public class Simulator implements Runnable {
         SimpleSensors sensors = new SimpleSensors();
         sensors.setGPSInterval(50);
         sensors.setGPSDelay(0);  // [ms]
-        //sensors.setGPSStartTime(-1);
         //sensors.setPressureAltOffset(world.getGlobalReference().alt);
         sensors.setNoise_Acc(0.02f);
         sensors.setNoise_Gyo(0.001f);
         sensors.setNoise_Mag(0.005f);
         sensors.setNoise_Prs(0.01f);
 
-        vehicle.setSensors(sensors);
+        vehicle.setSensors(sensors, getSimMillis());
 
         return vehicle;
     }
 
     private CameraGimbal2D buildGimbal() {
-        CameraGimbal2D g = new CameraGimbal2D(world, DEFAULT_GIMBAL_MODEL);
+        CameraGimbal2D g = new CameraGimbal2D(world, DEFAULT_GIMBAL_MODEL, SHOW_GUI);
         g.setBaseObject(vehicle);
         g.setPitchChannel(DEFAULT_CAM_PITCH_CHAN);
         g.setPitchScale(DEFAULT_CAM_PITCH_SCAL);
@@ -400,13 +505,42 @@ public class Simulator implements Runnable {
     }
 
     public void run() {
+        if (paused) {
+            return;
+        }
+
+        boolean needsToPause = false;
+        long now;
+
+        if (LOCKSTEP_ENABLED && !DISPLAY_ONLY) {
+            // In lockstep we run every update with a checkFactor of (e.g. 2).
+            // This way every second update is just an IO (input/output) run where
+            // time is not increased.
+            boolean ioRunOnly = (slowDownCounter % checkFactor != 0);
+
+            if (!hilSystem.gotHilActuatorControls() && !ioRunOnly) {
+                advanceTime();
+            }
+
+            now = getSimMillis();
+
+            needsToPause = ((lastTimeRan == now) || ioRunOnly);
+        } else {
+            now = getSimMillis();
+        }
+
         try {
-            world.update(System.currentTimeMillis());
+            world.update(now, needsToPause);
         } catch (Exception e) {
             System.err.println("Exception in Simulator.world.update() : ");
             e.printStackTrace();
             executor.shutdown();
         }
+
+        if (!needsToPause) {
+            lastTimeRan = now;
+        }
+        slowDownCounter++;
     }
 
     /**
@@ -443,8 +577,8 @@ public class Simulator implements Runnable {
 
         if (vals.length > 3) {
             try {
-                decl = new Double(vals[1]);
-                incl = new Double(vals[2]);
+                decl = Double.valueOf(vals[1]);
+                incl = Double.valueOf(vals[2]);
             } catch (NumberFormatException e) {
                 System.err.println("Error parsing response: " + resp + "\n");
                 return magField;
@@ -468,25 +602,65 @@ public class Simulator implements Runnable {
         return magField;
     }
 
+    public long getSimMillis() {
+        if (LOCKSTEP_ENABLED) {
+            if (simTimeUs == 0) {
+                simTimeUs = System.currentTimeMillis() * 1000;
+            }
+            return simTimeUs / 1000;
+        } else {
+            return System.currentTimeMillis();
+        }
+    }
+
+    public long getRealMillis() {
+        return System.currentTimeMillis();
+    }
+
+    public void advanceTime() {
+        if (LOCKSTEP_ENABLED) {
+            simTimeUs += sleepInterval;
+        }
+        // not needed without lockstep.
+    }
+
     public final static String PRINT_INDICATION_STRING = "-m [<MsgID[, MsgID]...>]";
     public final static String UDP_STRING = "-udp <mav ip>:<mav port>";
+    public final static String TCP_STRING = "-tcp <mav ip>:<mav port>";
     public final static String QGC_STRING = "-qgc <qgc ip address>:<qgc peer port>";
+    public final static String SDK_STRING = "-sdk <sdk ip address>:<sdk peer port>";
     public final static String SERIAL_STRING = "-serial [<path> <baudRate>]";
     public final static String MAG_STRING = "-automag";
     public final static String REP_STRING = "-rep";
+    public final static String SHOW_GUI_STRING = "[-no]-gui";
     public final static String GUI_AA_STRING = "[-no]-aa";
     public final static String GIMBAL_STRING = "[-no]-gimbal";
     public final static String GUI_MAX_STRING = "-max";
     public final static String GUI_VIEW_STRING = "-view (fpv|grnd|gmbl)";
     public final static String AP_STRING = "-ap <autopilot_type>";
-    public final static String SPEED_STRING = "-r <Hz>";
+    public final static String RATE_STRING = "-r <Hz>";
+    public final static String SPEED_FACTOR_STRING = "-f";
+    public final static String LOCKSTEP_STRING = "-lockstep";
+    public final static String DISPLAY_ONLY_STRING = "-disponly";
     public final static String CMD_STRING =
         "java [-Xmx512m] -cp lib/*:out/production/jmavsim.jar me.drton.jmavsim.Simulator";
     public final static String CMD_STRING_JAR = "java [-Xmx512m] -jar jmavsim_run.jar";
-    public final static String USAGE_STRING = CMD_STRING_JAR + " [-h] [" + UDP_STRING + " | " +
-                                              SERIAL_STRING + "] [" + SPEED_STRING + "] [" + AP_STRING + "] [" + MAG_STRING + "] " +
-                                              "[" + QGC_STRING + "] [" + GIMBAL_STRING + "] [" + GUI_AA_STRING + "] [" + GUI_MAX_STRING + "] [" +
-                                              GUI_VIEW_STRING + "] [" + REP_STRING + "] [" + PRINT_INDICATION_STRING + "]";
+    public final static String USAGE_STRING = CMD_STRING_JAR + " [-h] [" +
+                                              UDP_STRING + " | " +
+                                              SERIAL_STRING + "] [" +
+                                              RATE_STRING + "] [" +
+                                              AP_STRING + "] [" +
+                                              MAG_STRING + "] " + "[" +
+                                              QGC_STRING + "] [" +
+                                              SDK_STRING + "] [" +
+                                              GIMBAL_STRING + "] [" +
+                                              SHOW_GUI_STRING + "] [" +
+                                              GUI_AA_STRING + "] [" +
+                                              GUI_MAX_STRING + "] [" +
+                                              GUI_VIEW_STRING + "] [" +
+                                              REP_STRING + "] [" +
+                                              PRINT_INDICATION_STRING + "] [" +
+                                              DISPLAY_ONLY_STRING + "]";
 
     public static void main(String[] args)
     throws InterruptedException, IOException {
@@ -525,7 +699,7 @@ public class Simulator implements Runnable {
                     continue;
                 }
             } else if (arg.equalsIgnoreCase("-udp")) {
-                USE_SERIAL_PORT = false;
+                PORT = Port.UDP;
                 if (i == args.length) {
                     // only arg is -udp, so use default values.
                     break;
@@ -554,8 +728,38 @@ public class Simulator implements Runnable {
                     System.err.println("-udp needs an argument: " + UDP_STRING);
                     return;
                 }
+            } else if (arg.equalsIgnoreCase("-tcp")) {
+                PORT = Port.TCP;
+                if (i == args.length) {
+                    // only arg is -tcp, so use default values.
+                    break;
+                }
+                if (i < args.length) {
+                    String nextArg = args[i++];
+                    if (nextArg.startsWith("-")) {
+                        // only turning on udp, but want to use default ports
+                        i--;
+                        continue;
+                    }
+                    try {
+                        // try to parse passed-in ports.
+                        String[] list = nextArg.split(":");
+                        if (list.length != 2) {
+                            System.err.println("Expected: " + TCP_STRING + ", got: " + Arrays.toString(list));
+                            return;
+                        }
+                        autopilotIpAddress = list[0];
+                        autopilotPort = Integer.parseInt(list[1]);
+                    } catch (NumberFormatException e) {
+                        System.err.println("Expected: " + USAGE_STRING + ", got: " + e.toString());
+                        return;
+                    }
+                } else {
+                    System.err.println("-tcp needs an argument: " + TCP_STRING);
+                    return;
+                }
             } else if (arg.equals("-serial")) {
-                USE_SERIAL_PORT = true;
+                PORT = Port.SERIAL;
                 if (i >= args.length) {
                     // only arg is -serial, so use default values
                     break;
@@ -608,6 +812,36 @@ public class Simulator implements Runnable {
                     System.err.println("-qgc needs an argument: " + QGC_STRING);
                     return;
                 }
+            } else if (arg.equals("-sdk")) {
+                COMMUNICATE_WITH_SDK = true;
+                if (i == args.length) {
+                    // only arg is -sdk, so use default values.
+                    break;
+                }
+                if (i < args.length) {
+                    String nextArg = args[i++];
+                    if (nextArg.startsWith("-")) {
+                        // only turning on udp, but want to use default ports
+                        i--;
+                        continue;
+                    }
+                    try {
+                        // try to parse passed-in ports.
+                        String[] list = nextArg.split(":");
+                        if (list.length != 2) {
+                            System.err.println("Expected: " + SDK_STRING + ", got: " + Arrays.toString(list));
+                            return;
+                        }
+                        sdkIpAddress = list[0];
+                        sdkPeerPort = Integer.parseInt(list[1]);
+                    } catch (NumberFormatException e) {
+                        System.err.println("Expected: " + SDK_STRING + ", got: " + e.toString());
+                        return;
+                    }
+                } else {
+                    System.err.println("-sdk needs an argument: " + SDK_STRING);
+                    return;
+                }
             } else if (arg.equals("-ap")) {
                 if (i < args.length) {
                     autopilotType = args[i++];
@@ -621,10 +855,26 @@ public class Simulator implements Runnable {
                     try {
                         t = Integer.parseInt(args[i++]);
                     } catch (NumberFormatException e) {
-                        System.err.println("Expected numeric argument after -r: " + SPEED_STRING);
+                        System.err.println("Expected numeric argument after -r: " + RATE_STRING);
                         return;
                     }
                     sleepInterval = (int)1e6 / t;
+                } else {
+                    System.err.println("-r requires Hz as an argument.");
+                    return;
+                }
+            } else if (arg.equals("-f")) {
+                if (i < args.length) {
+                    double f;
+                    try {
+                        f = Double.parseDouble(args[i++]);
+                    } catch (NumberFormatException e) {
+                        System.err.println("Expected numeric argument after -f: " + SPEED_FACTOR_STRING);
+                        return;
+                    }
+                    speedFactor = f;
+                    System.out.println("Warning: Setting speed factor using -f is deprecated.");
+                    System.out.println("Please use the environment variable PX4_SIM_SPEED_FACTOR instead.");
                 } else {
                     System.err.println("-r requires Hz as an argument.");
                     return;
@@ -646,6 +896,8 @@ public class Simulator implements Runnable {
                     System.err.println("-view requires an argument: " + GUI_VIEW_STRING);
                     return;
                 }
+            } else if (arg.equals(DISPLAY_ONLY_STRING)) {
+                DISPLAY_ONLY = true;    // // display HIL_STATE_QUATERNION from the autopilot, simulation engine disabled
             } else if (arg.equals("-automag")) {
                 DO_MAG_FIELD_LOOKUP = true;
             } else if (arg.equals("-rep")) {
@@ -660,6 +912,12 @@ public class Simulator implements Runnable {
                 USE_GIMBAL = true;
             } else if (arg.equals("-no-gimbal")) {
                 USE_GIMBAL = false;
+            } else if (arg.equals("-gui")) {
+                SHOW_GUI = true;
+            } else if (arg.equals("-no-gui")) {
+                SHOW_GUI = false;
+            } else if (arg.equals("-lockstep")) {
+                LOCKSTEP_ENABLED = true;
             } else if (arg.equals("-debug")) {
                 DEBUG_MODE = true;
             } else {
@@ -670,6 +928,12 @@ public class Simulator implements Runnable {
 
         if (i != args.length) {
             System.err.println("Usage: " + USAGE_STRING);
+            return;
+        }
+
+        if (speedFactor != DEFAULT_SPEED_FACTOR && !LOCKSTEP_ENABLED) {
+            System.err.println(SPEED_FACTOR_STRING + " requires lockstep to be enabled using: '" +
+                               LOCKSTEP_STRING + "'");
             return;
         }
 
@@ -690,9 +954,15 @@ public class Simulator implements Runnable {
         System.out.println(SERIAL_STRING);
         System.out.println("      Open a serial connection to the MAV instead of UDP.");
         System.out.println("      Default path/baud is: " + serialPath + " " + serialBaudRate + "");
-        System.out.println(SPEED_STRING);
+        System.out.println(RATE_STRING);
         System.out.println("      Refresh rate at which jMAVSim runs. This dictates the frequency");
-        System.out.println("      of the HIL_SENSOR messages. Default is " + DEFAULT_SIM_SPEED + " Hz");
+        System.out.println("      of the HIL_SENSOR messages. Default is " + DEFAULT_SIM_RATE + " Hz");
+        System.out.println(SPEED_FACTOR_STRING);
+        System.out.println("      Speed factor at which jMAVSim runs. A factor of 2.0 means the system");
+        System.out.println("      runs double than real time speed. Default is " + DEFAULT_SPEED_FACTOR);
+        System.out.println(LOCKSTEP_STRING);
+        System.out.println("      Set to enable Lockstep simulation (used with PX4 SITL),");
+        System.out.println("      required for speed factor '-f'.");
         System.out.println(AP_STRING);
         System.out.println("      Specify the MAV type. E.g. 'px4' or 'aq'. Default is: " + autopilotType +
                            "");
@@ -702,8 +972,14 @@ public class Simulator implements Runnable {
         System.out.println(QGC_STRING);
         System.out.println("      Forward message packets to QGC via UDP at " + qgcIpAddress + ":" +
                            qgcPeerPort + "");
+        System.out.println(SDK_STRING);
+        System.out.println("      Forward message packets to SDK via UDP at " + sdkIpAddress + ":" +
+                           sdkPeerPort + "");
         System.out.println(GIMBAL_STRING);
         System.out.println("      Enable/Disable the gimbal model. Default is '" + USE_GIMBAL + "'.");
+        System.out.println(SHOW_GUI_STRING);
+        System.out.println("      Enable/Disable the GUI. Default is '" + SHOW_GUI +
+                           "'.");
         System.out.println(GUI_AA_STRING);
         System.out.println("      Enable/Disable anti-aliasing on 3D scene. Default is '" + GUI_ENABLE_AA +
                            "'.");
@@ -717,6 +993,10 @@ public class Simulator implements Runnable {
         System.out.println(PRINT_INDICATION_STRING);
         System.out.println("      Monitor (echo) all/selected MAVLink messages to the console.");
         System.out.println("      If no MsgIDs are specified, all messages are monitored.");
+        System.out.println(DISPLAY_ONLY_STRING);
+        System.out.println("      Disable the simulation engine.");
+        System.out.println("      Display the autopilot states from HIL_STATE_QUATERNION.");
+        System.out.println("      Compatible with simulation-in-hardware.");
         System.out.println("");
         System.out.println("Key commands (in the visualizer window):");
         System.out.println("");
@@ -742,6 +1022,7 @@ public class Simulator implements Runnable {
         System.out.println("   T   - Toggle data report updates.");
         System.out.println("   D   - Toggle sensor parameter control sidebar.");
         System.out.println("   F1  - Show this key commands reference.");
+        System.out.println("   P   - Pause simulation.");
         System.out.println("  ESC  - Exit jMAVSim.");
         System.out.println(" SPACE - Reset vehicle & view to start position.");
         System.out.println("");
